[gd_scene load_steps=5 format=2]

[ext_resource path="res://jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://principal.gd" type="Script" id=2]
[ext_resource path="res://inimigos.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2, -1, 0, 0, 0, 0, 479, 1, 0, 0, 0, 0, 479, 719 )
}

[node name="Principal" type="Node"]
script = ExtResource( 2 )
Inimigo = ExtResource( 3 )

[node name="jogador" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 0 )

[node name="inicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="pontuacaoTimer" type="Timer" parent="."]

[node name="inimigoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="posicaoInicial" type="Position2D" parent="."]

[node name="caminhoInimigo" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawnInimigo" type="PathFollow2D" parent="caminhoInimigo"]
position = Vector2( -2, -1 )
rotation = 0.004158

[connection signal="hit" from="jogador" to="." method="_on_jogador_hit"]
[connection signal="timeout" from="inicioTimer" to="." method="_on_inicioTimer_timeout"]
[connection signal="timeout" from="pontuacaoTimer" to="." method="_on_pontuacaoTimer_timeout"]
[connection signal="timeout" from="inimigoTimer" to="." method="_on_inimigoTimer_timeout"]
